<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="4dp"
    >

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="100dp"
    app:cardCornerRadius="4dp"
    android:layout_margin="4dp"
    android:layout_marginBottom="4dp"
    >

    <TextView
        android:id="@+id/tv_recipe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/recipe_title"
        style="@style/TextAppearance.AppCompat.Headline"/>
</android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>